--- a/Selhome/selhome.scss
+++ b/Selhome/selhome.scss
@@ -1218,58 +1218,200 @@ main {
 @media only screen and (max-width: 575px) {
     nav {
         // border: 1px solid red;
-        width: 119%;
+        width: 99.7%;
+
+        .extra-small-menu__button:hover ~ .extra-small-menu__dropdown {
+            display: block;
+
+            .extra-small-menu__dropdown-close {
+                display: flex;
+            }
+        }
+
         .menu {
-            &__list {
-                &--chevrons {
-                    font-size: 10px;
+            height: 40px;
+        }
+
+        .dropdown-logo {
+            width: 180px;
+            position: relative;
+            left: 195px;
+        }
+
+        .search__logo {
+            position: relative;
+            left: -76px;
+        }
+
+        .extra-small-menu__dropdown-close {
+            position: absolute;
+            top: 10px;
+            left: 547px;
+            border: none;
+            background-color: transparent;
+            width: 20px;
+            height: 20px;
+            border-radius: 2px;
+            z-index: 102;
+            display: none;
+            justify-content: center;
+            align-items: center;
+
+            .fa-xmark {
+                color: rgb(0,0,0);
+                opacity: 0.8;
+                scale: 2;
+            }
+        }
+
+        .extra-small-menu__button {
+            display: block;
+            position: relative;
+            top: 20px;
+            left: 10px;
+            border: none;
+            background-color: transparent;
+            width: 30px;
+            left: 30px;
+            z-index: 100;
+
+            .fa-bars {
+                color: $selhome_default_color;
+                scale: 2;
+            }
+        }
+
+        .extra-small-menu__dropdown {
+            display: none;
+            // border: 1px solid red;
+            position: fixed;
+            top: 0px;
+            left: 0px;
+            z-index: 101;
+            background-color: rgb(255,255,255);
+            width: 99.7%;
+            height: 696px;
+
+            &--list {
+                .menu__list--chevrons {
+                    padding: 15px 20px 15px;
+                    border-bottom: 1px solid rgb(200,200,200);
+                    font-size: 12px;
                 }
-                &--dropdown_metbex {
-                    width: 400px;
-                    ul {
-                        font-size: 10px;
-                        margin: 0px;
-                        padding: 20px 0px 20px;
-                        li {
-                            margin-bottom: 2px;
-                        }
-                        img {
-                            width: 100px;
-                            height: 60px;
-                        }
+            }
+        }
+        .menu__list {
+            display: none;
+        }
+        .menu__list--dropdown {
+            &_metbex, &_hamam, &_yataq, &_dekor, &_usaq,
+            &_milli, &_mebel, &_hediyye, &_yeni, &_endirim {
+                display: none;
+                position: relative;
+                top: 0px;
+                left: -152px;
+                li {
+                    margin-bottom: 2px;
+                    a {
+                        padding: 3px 10px 3px;
                     }
                 }
             }
         }
-        .search__searchbar--panel {
-            width: 300px;
-            position: relative;
-            top: 17px;
-            padding-right: 40px;
+        .menu__list--chevrons:hover {
+            .menu__list--dropdown {
+                &_metbex, &_hamam, &_yataq, &_dekor, &_usaq,
+                &_milli, &_mebel, &_hediyye, &_yeni, &_endirim {
+                    display: block;
+                    img {
+                        display: none;
+                    }
+                }
+            }
         }
-        .search__searchbar--button {
-            position: relative;
-            top: -20px;
-            left: 260px;
+
+        .search__searchbar, .search__langbar {
+            display: none;
         }
-        .search__langbar--selector {
-            width: 116px;
-        }
-        .fa-globe {
+
+        .search__userpanel {
             position: relative;
-            top: -17px;
-            left: -22px;
+            left: 63px;
+            z-index: 100;
         }
     }
     main {
         .collections, .topsells {
             // border: 1px solid red;
-            width: 119%;
+            width: 99.7%;
+        }
+        .collections {
+            &__carousel {
+                #bag {
+                    left: 44%;
+                }
+                #org {
+                    left: 50%;
+                }
+                #ag {
+                    left: 56%;
+                }
+            }
+        }
+        .topsells {
+            // border: 1px solid red;
+            height: auto;
+
+            .topsells__cardscontainer {
+                flex-wrap: wrap;
+                &--card {
+                    width: 100%;
+                    a {
+                        img {
+                            width: 100%;
+                            height: 285px;
+                            object-fit: cover;
+                        }
+                    }
+                }
+            }
         }
     }
     .footer {
         // border: 1px solid red;
-        width: 119%;
+        width: 99.7%;
+        height: auto;
+
+        .footer__upside {
+            display: block;
+        }
+
+        ul {
+            width: 100%;
+            margin: 0px;
+
+            input[type="email"] {
+                width: 90%;
+            }
+        }
+
+        .footer__bottom {
+            display: block;
+
+            #first {
+                display: block;
+                margin-bottom: 15px;
+
+                form {
+                    margin: 10px 0px 10px;
+                }
+
+                .fa-globe {
+                    top: 0px;
+                    left: -35px;
+                }
+            }
+        }
     }
 }
 // ------------------------------------------------------------
@@ -1280,5 +1422,9 @@ main {
 @media only screen and (max-width: 991px) {}
 // ------------------------------------------------------------
 // ----- DESKTOP DEVICES | MOBILE RESPONSIVE SETTINGS -----
-@media only screen and (max-width: 1199px) {}
+@media only screen and (min-width: 1199px) {
+    .extra-small-menu__dropdown {
+        display: none;
+    }
+}
 // ------------------------------------------------------------
