--- a/January 9-12, 2023/zyro-ginza.css
+++ b/January 9-12, 2023/zyro-ginza.css
@@ -18,9 +18,6 @@ li {
   list-style: none;
 }
 
-#nav {
-  display: none;
-}
 #nav .nav-bgimage {
   width: 99.85%;
   -o-object-fit: cover;
@@ -149,13 +146,273 @@ li {
   border: 1px solid red;
 }
 
-#main .main {
+#main .sections {
   width: 99.85%;
   height: auto;
+  border: 1px solid red;
 }
-
-#footer {
-  display: none;
+#main .memories {
+  width: 90%;
+  height: auto;
+  border: 1px solid red;
+  position: relative;
+  left: 5%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding: 100px 0px;
+  -moz-column-gap: 80px;
+       column-gap: 80px;
+}
+@media only screen and (max-width: 575px) {
+  #main .memories {
+    flex-direction: column-reverse;
+  }
+}
+#main .memories__image {
+  border: 1px solid red;
+  width: 48%;
+  height: auto;
+}
+@media only screen and (max-width: 575px) {
+  #main .memories__image {
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 100%;
+    height: 500px;
+  }
+}
+#main .memories__textcontainer {
+  border: 1px solid red;
+  width: 35%;
+}
+@media only screen and (max-width: 575px) {
+  #main .memories__textcontainer {
+    width: 100%;
+  }
+}
+#main .memories__textcontainer--header {
+  font-size: 60px;
+  font-weight: 900;
+  line-height: 70px;
+  color: rgb(0, 0, 0);
+  margin-bottom: 60px;
+}
+@media only screen and (max-width: 575px) {
+  #main .memories__textcontainer--header {
+    width: 70%;
+    font-size: 50px;
+    line-height: 60px;
+  }
+}
+#main .memories__textcontainer--description {
+  width: 85%;
+  color: rgb(0, 0, 0);
+  border: 1px solid red;
+  margin-bottom: 50px;
+}
+@media only screen and (max-width: 575px) {
+  #main .memories__textcontainer--description {
+    width: 100%;
+    font-size: 24px;
+  }
+}
+#main .memories__textcontainer--button, #main .booking__button, #main .popular__button {
+  border: 1px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  width: 140px;
+  height: 45px;
+  background-color: transparent;
+  cursor: pointer;
+}
+@media only screen and (max-width: 575px) {
+  #main .memories__textcontainer--button, #main .booking__button, #main .popular__button {
+    scale: 1.2;
+    position: relative;
+    left: 3%;
+  }
+}
+#main .popular {
+  width: 90%;
+  position: relative;
+  left: 5%;
+  border: 1px solid red;
+  padding: 80px 0px 40px;
+  background-color: rgb(245, 245, 245);
+}
+#main .popular__header {
+  text-align: center;
+  color: rgb(0, 0, 0);
+  margin-bottom: 60px;
+  font-size: 60px;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__header {
+    font-size: 40px;
+  }
+}
+#main .popular__container {
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__container {
+    flex-direction: column;
+  }
+}
+#main .popular__container--cards {
+  width: 40%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__container--cards {
+    width: 80%;
+    justify-content: space-around;
+  }
+}
+#main .popular__container--cards_image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__container--cards_image {
+    margin-left: 19%;
+    width: 86%;
+  }
+}
+#main .popular__container--cards_header {
+  color: rgb(0, 0, 0);
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__container--cards_header {
+    margin-left: 19%;
+    width: 86%;
+    position: relative;
+  }
+}
+#main .product-name {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+}
+#main .popular__container--cards_price {
+  color: rgb(0, 0, 0);
+  font-size: 30px;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__container--cards_price {
+    position: absolute;
+    top: 160px;
+  }
+}
+#main .popular__container--cards_text {
+  color: rgb(0, 0, 0);
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__container--cards_text {
+    margin-left: 19%;
+    width: 86%;
+    font-size: larger;
+    margin-bottom: 100px;
+  }
+}
+#main .popular__buttonlink {
+  position: relative;
+  left: 44%;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__buttonlink {
+    left: 34%;
+  }
+}
+#main .popular__button {
+  margin-top: 100px;
+}
+@media only screen and (max-width: 575px) {
+  #main .popular__button {
+    margin-top: 40px;
+  }
+}
+#main .gallery {
+  border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+  padding: 140px 0px 10px;
+  width: 90%;
+  height: auto;
+  position: relative;
+  left: 5%;
+}
+#main .gallery__column {
+  width: 50%;
+}
+#main .gallery__header {
+  margin: 160px 0px 40px;
+  color: rgb(0, 0, 0);
+  font-size: 60px;
+  width: 80%;
+}
+#main .gallery__text {
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  width: 70%;
+  line-height: 20px;
+}
+#main .gallery__img {
+  width: 100%;
+}
+#main .spec-edit {
+  width: 45%;
+  margin-bottom: 50px;
+}
+#main .last-img {
+  width: 80%;
+  position: relative;
+  left: 20%;
+}
+#main .booking {
+  border: 1px solid red;
+  width: 90%;
+  height: 660px;
+  position: relative;
+  left: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 70px;
+  background-color: rgb(245, 245, 245);
+}
+@media only screen and (max-width: 575px) {
+  #main .booking {
+    height: 500px;
+  }
+}
+#main .booking__header {
+  color: rgb(0, 0, 0);
+  font-size: 60px;
+}
+@media only screen and (max-width: 575px) {
+  #main .booking__header {
+    margin-top: 40px;
+  }
+}
+#main .booking__text {
+  border: 1px solid red;
+  color: rgb(0, 0, 0);
+  width: 25%;
+  line-height: 30px;
+}
+@media only screen and (max-width: 575px) {
+  #main .booking__text {
+    font-size: 20px;
+    width: 75%;
+  }
 }
 #footer .footer {
   border: 1px solid red;
