--- a/January 9-12, 2023/zyro-ginza.css
+++ b/January 9-12, 2023/zyro-ginza.css
@@ -26,7 +26,7 @@ li {
   top: 0%;
   left: 0%;
   z-index: -1;
-  border: 1px solid red;
+  border: none;
 }
 @media only screen and (max-width: 575px) {
   #nav .nav-bgimage {
@@ -38,7 +38,7 @@ li {
 #nav .nav {
   position: relative;
   padding: 50px 20px;
-  border: 1px solid red;
+  border: none;
   height: 750px;
   display: flex;
   flex-direction: column;
@@ -50,7 +50,7 @@ li {
   }
 }
 #nav .nav__tab {
-  border: 1px solid red;
+  border: none;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -62,10 +62,10 @@ li {
   }
 }
 #nav .nav__logo--link {
-  border: 1px solid red;
+  border: none;
 }
 #nav .nav__logo--img {
-  border: 1px solid red;
+  border: none;
 }
 #nav .nav__menubutton {
   display: none;
@@ -73,7 +73,7 @@ li {
   width: 50px;
   height: 50px;
   cursor: pointer;
-  border: 1px solid red;
+  border: none;
 }
 @media only screen and (max-width: 575px) {
   #nav .nav__menubutton {
@@ -81,13 +81,16 @@ li {
     justify-content: center;
     align-items: center;
   }
+  #nav .nav__menubutton:hover .nav__menucontainer {
+    visibility: visible;
+  }
 }
 #nav .fa-bars {
-  border: 1px solid red;
+  border: none;
   scale: 3.2 2.8;
 }
 #nav .nav__menucontainer {
-  border: 1px solid red;
+  border: none;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -95,14 +98,45 @@ li {
   -moz-column-gap: 30px;
        column-gap: 30px;
 }
+@media only screen and (max-width: 575px) {
+  #nav .nav__menucontainer {
+    display: block;
+    position: relative;
+    top: 0px;
+    left: 50%;
+    width: 50%;
+    text-align: center;
+    background-color: rgb(245, 245, 245);
+    border: 2px solid rgb(0, 0, 0);
+    line-height: 50px;
+    visibility: hidden;
+  }
+}
 #nav .nav__menucontainer--list {
-  border: 1px solid red;
+  border: none;
+  transition: linear 1.5s;
+}
+#nav .nav__menucontainer--list:hover {
+  background: linear-gradient(to right, rgb(255, 255, 128), rgb(255, 172, 128));
+  transition: linear 1.5s;
+}
+@media only screen and (max-width: 575px) {
+  #nav .nav__menucontainer--list {
+    border-bottom: 1px solid rgb(0, 0, 0);
+  }
 }
 #nav .nav__menucontainer--link {
-  border: 1px solid red;
+  border: none;
+}
+@media only screen and (max-width: 575px) {
+  #nav .nav__menucontainer--link {
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: 900;
+  }
 }
 #nav .nav__text {
-  border: 1px solid red;
+  border: none;
   font-size: 80px;
   font-weight: 800;
   width: 60%;
@@ -119,7 +153,7 @@ li {
   }
 }
 #nav .nav__social {
-  border: 1px solid red;
+  border: none;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -134,7 +168,7 @@ li {
   }
 }
 #nav .nav__social--links {
-  border: 1px solid red;
+  border: none;
   scale: 1.5;
 }
 @media only screen and (max-width: 575px) {
@@ -143,18 +177,18 @@ li {
   }
 }
 #nav .fa-brands {
-  border: 1px solid red;
+  border: none;
 }
 
 #main .sections {
   width: 99.85%;
   height: auto;
-  border: 1px solid red;
+  border: none;
 }
 #main .memories {
   width: 90%;
   height: auto;
-  border: 1px solid red;
+  border: none;
   position: relative;
   left: 5%;
   display: flex;
@@ -170,7 +204,7 @@ li {
   }
 }
 #main .memories__image {
-  border: 1px solid red;
+  border: none;
   width: 48%;
   height: auto;
 }
@@ -183,7 +217,7 @@ li {
   }
 }
 #main .memories__textcontainer {
-  border: 1px solid red;
+  border: none;
   width: 35%;
 }
 @media only screen and (max-width: 575px) {
@@ -208,7 +242,7 @@ li {
 #main .memories__textcontainer--description {
   width: 85%;
   color: rgb(0, 0, 0);
-  border: 1px solid red;
+  border: none;
   margin-bottom: 50px;
 }
 @media only screen and (max-width: 575px) {
@@ -224,6 +258,12 @@ li {
   height: 45px;
   background-color: transparent;
   cursor: pointer;
+  transition: linear 0.15s;
+}
+#main .memories__textcontainer--button:hover, #main .booking__button:hover, #main .popular__button:hover {
+  background-color: rgb(16, 16, 16);
+  color: rgb(255, 255, 255);
+  transition: linear 0.15s;
 }
 @media only screen and (max-width: 575px) {
   #main .memories__textcontainer--button, #main .booking__button, #main .popular__button {
@@ -236,7 +276,7 @@ li {
   width: 90%;
   position: relative;
   left: 5%;
-  border: 1px solid red;
+  border: none;
   padding: 80px 0px 40px;
   background-color: rgb(245, 245, 245);
 }
@@ -339,7 +379,7 @@ li {
   }
 }
 #main .gallery {
-  border: 1px solid red;
+  border: none;
   display: flex;
   justify-content: space-between;
   padding: 140px 0px 10px;
@@ -348,8 +388,18 @@ li {
   position: relative;
   left: 5%;
 }
+@media only screen and (max-width: 575px) {
+  #main .gallery {
+    flex-direction: column-reverse;
+  }
+}
 #main .gallery__column {
   width: 50%;
+}
+@media only screen and (max-width: 575px) {
+  #main .gallery__column {
+    width: 100%;
+  }
 }
 #main .gallery__header {
   margin: 160px 0px 40px;
@@ -357,11 +407,25 @@ li {
   font-size: 60px;
   width: 80%;
 }
+@media only screen and (max-width: 575px) {
+  #main .gallery__header {
+    font-size: 40px;
+    margin: 80px 0px 20px;
+  }
+}
 #main .gallery__text {
   color: rgb(0, 0, 0);
   font-size: 16px;
   width: 70%;
   line-height: 20px;
+}
+@media only screen and (max-width: 575px) {
+  #main .gallery__text {
+    font-size: 21px;
+    line-height: 24px;
+    width: 95%;
+    margin-bottom: 100px;
+  }
 }
 #main .gallery__img {
   width: 100%;
@@ -370,13 +434,26 @@ li {
   width: 45%;
   margin-bottom: 50px;
 }
+@media only screen and (max-width: 575px) {
+  #main .spec-edit {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
 #main .last-img {
   width: 80%;
   position: relative;
   left: 20%;
 }
+@media only screen and (max-width: 575px) {
+  #main .last-img {
+    width: 100%;
+    left: 0%;
+  }
+}
 #main .booking {
-  border: 1px solid red;
+  border: none;
   width: 90%;
   height: 660px;
   position: relative;
@@ -403,7 +480,7 @@ li {
   }
 }
 #main .booking__text {
-  border: 1px solid red;
+  border: none;
   color: rgb(0, 0, 0);
   width: 25%;
   line-height: 30px;
@@ -415,7 +492,7 @@ li {
   }
 }
 #footer .footer {
-  border: 1px solid red;
+  border: none;
   width: 99.85%;
   height: 400px;
   background-color: rgb(16, 16, 16);
@@ -434,7 +511,7 @@ li {
 }
 #footer .footer__logocolumn {
   margin-top: 110px;
-  border: 1px solid red;
+  border: none;
   width: 17%;
   margin-right: 150px;
   height: 200px;
@@ -448,7 +525,7 @@ li {
 }
 #footer .footer__columns {
   margin-top: 140px;
-  border: 1px solid red;
+  border: none;
   width: 13%;
   height: 200px;
 }
