--- a/January 9-12, 2023/zyro-ginza.scss
+++ b/January 9-12, 2023/zyro-ginza.scss
@@ -20,8 +20,8 @@ li {
     list-style: none;
 }
 @mixin test-boxes {
-    border: 1px solid red;
-    // border: none;
+    // border: 1px solid red;
+    border: none;
 }
 @mixin flex-cc {
     display: flex;
@@ -96,6 +96,10 @@ li {
 
         @media only screen and (max-width: 575px) {
             @include flex-cc;
+
+            &:hover .nav__menucontainer {
+                visibility: visible;
+            }
         }
     }
 
@@ -111,14 +115,46 @@ li {
         justify-content: center;
         align-items: center;
         column-gap: 30px;
+
+        @media only screen and (max-width: 575px) {
+            display: block;
+            position: relative;
+            top: 0px;
+            left: 50%;
+            width: 50%;
+            text-align: center;
+            background-color: rgb(245,245,245);
+            border: 2px solid rgb(0,0,0);
+            line-height: 50px;
+            visibility: hidden;
+        }
     }
 
     .nav__menucontainer--list {
         @include test-boxes;
+        transition: linear 1.5s;
+
+        &:hover {
+            background: linear-gradient(
+                to right,
+                rgb(255,255,128),
+                rgb(255,172,128)
+            );
+            transition: linear 1.5s;
+        }
+        @media only screen and (max-width: 575px) {
+            border-bottom: 1px solid rgb(0,0,0);
+        }
     }
 
     .nav__menucontainer--link {
         @include test-boxes;
+
+        @media only screen and (max-width: 575px) {
+            color: rgb(0,0,0);
+            font-size: 20px;
+            font-weight: 900;
+        }
     }
 
     .nav__text {
@@ -248,6 +284,13 @@ li {
         height: 45px;
         background-color: transparent;
         cursor: pointer;
+        transition: linear 0.15s;
+
+        &:hover {
+            background-color: rgb(16,16,16);
+            color: rgb(255,255,255);
+            transition: linear 0.15s;
+        }
 
         @media only screen and (max-width: 575px) {
             scale: 1.2;
@@ -374,13 +417,17 @@ li {
         position: relative;
         left: 5%;
 
-        @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 575px) {
+            flex-direction: column-reverse;
+        }
     }
 
     .gallery__column {
         width: 50%;
 
-        @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 575px) {
+            width: 100%;
+        }
     }
 
     .gallery__header {
@@ -389,7 +436,10 @@ li {
         font-size: 60px;
         width: 80%;
 
-        @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 575px) {
+            font-size: 40px;
+            margin: 80px 0px 20px;
+        }
     }
 
     .gallery__text {
@@ -398,7 +448,12 @@ li {
         width: 70%;
         line-height: 20px;
 
-        @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 575px) {
+            font-size: 21px;
+            line-height: 24px;
+            width: 95%;
+            margin-bottom: 100px;
+        }
     }
 
     .gallery__img{
@@ -411,7 +466,11 @@ li {
         width: 45%;
         margin-bottom: 50px;
 
-        @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 575px) {
+            width: 100%;
+            display: flex;
+            flex-direction: row-reverse;
+        }
     }
 
     .last-img {
@@ -419,7 +478,10 @@ li {
         position: relative;
         left: 20%;
 
-        @media only screen and (max-width: 575px) {}
+        @media only screen and (max-width: 575px) {
+            width: 100%;
+            left: 0%;
+        }
     }
 
     .booking {
