--- a/Zyro Kodah/zyro-kodah.css
+++ b/Zyro Kodah/zyro-kodah.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Montserrat", "sans-serif";
+  font-family: "Josefin Slab", serif;
   border: 1px solid greenyellow;
   color: rgb(0, 0, 0);
 }
